[gd_scene load_steps=7 format=3 uid="uid://bq0d320nhkxoa"]

[ext_resource type="Texture2D" uid="uid://cgr5dsheunn7i" path="res://Assets/Imagenes/molinillo.png" id="1_bdgwh"]
[ext_resource type="Script" uid="uid://bc2eewkamkn1t" path="res://Assets/Objetos/area_enganche.gd" id="2_4wki5"]
[ext_resource type="Script" uid="uid://dilo56yq20qxu" path="res://Assets/Objetos/grinder_particles.gd" id="4_4cfip"]
[ext_resource type="AudioStream" uid="uid://dypvtfvbyoyc4" path="res://Assets/Sounds/grinding.wav" id="4_ww8ox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdgwh"]
size = Vector2(85, 67)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gb2ku"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 13.261
initial_velocity_min = 30.0
initial_velocity_max = 30.0
gravity = Vector3(0, 98, 0)
damping_min = 4.302
damping_max = 5.377
scale_min = 1.2
scale_max = 1.2
color = Color(0.470588, 0.227451, 0.12549, 1)

[node name="Molinillo" type="Area2D"]
script = ExtResource("2_4wki5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(59.3749, -89.0624)
scale = Vector2(0.309815, 0.309815)
texture = ExtResource("1_bdgwh")

[node name="Area Enganche" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Enganche"]
position = Vector2(61.5, -5.5)
shape = SubResource("RectangleShape2D_bdgwh")

[node name="Boton" type="Area2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="Boton"]
offset_left = 65.0
offset_top = -171.0
offset_right = 105.0
offset_bottom = -131.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Boton"]
stream = ExtResource("4_ww8ox")

[node name="Salida Cafe" type="GPUParticles2D" parent="."]
z_index = 6
position = Vector2(59, -75)
rotation = 1.48546
emitting = false
amount = 1200
lifetime = 0.95
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_gb2ku")
script = ExtResource("4_4cfip")

[node name="CoffeeSpawnPoint" type="Marker2D" parent="."]
position = Vector2(60, -31)

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="PortafilterAnchor" type="Marker2D" parent="."]
position = Vector2(59, -76)

[connection signal="body_entered" from="Area Enganche" to="." method="_on_AreaEnganche_body_entered"]
[connection signal="body_exited" from="Area Enganche" to="." method="_on_AreaEnganche_body_exited"]
